# governai

./: .gitignore  AGENT.md  CHANGELOG.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v0.3.0-MILESTONE-AUDIT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: USAGE.md  patterns.md  quickstart.md  reference.md  sandbox.md  threading.md
examples/: strict_remote_sandbox.py  support_flow.py  support_flow_from_definitions.py  thread_resume.py
examples/config/: support_flow.dsl  (+1 more)
governai/: __init__.py
tests/: test_agent_handoffs.py  test_agent_spec.py  test_agent_tool_restrictions.py  test_agents.py  test_approval_interruptions.py  test_atomic_run_store.py  test_audit_events.py  test_audit_extensions.py  test_capability_policy.py  test_checkpoints.py  test_cli_tools.py  test_command_interrupts.py  test_command_reducers.py  test_execution_backends.py  test_flow_config.py  test_flow_dsl.py  test_governed_flow.py  test_http_client.py  test_interrupt_manager.py  test_interrupt_persistence.py  test_llm_wrapper.py  test_memory.py  test_multi_agent_workflow.py  test_persistent_resume.py  test_policy_checks.py  test_provider_errors.py  test_redis_audit.py  test_remote_execution.py  test_run_store.py  test_secrets.py  test_skills.py  test_thread_store.py  test_threaded_runs.py  test_tool_calls.py  test_tool_manifest.py  test_tools.py  test_workflow_bounded_routing.py  test_workflow_branching.py  test_workflow_strict.py
(+118 files in other folders)
